hard-gists/dde829f94a8f83bfa922090102449fde/run.log
=== Docker Run Log for dde829f94a8f83bfa922090102449fde ===
Started at: Mi 29. Okt 20:34:48 CET 2025

[2025-10-29 20:34:49] START: Running container for dde829f94a8f83bfa922090102449fde
[2025-10-29 20:34:49] SUCCESS: Container 1a91df01dda6fe13beb46a14bdb2eee989e1a584de900d93acc97f7124355fff started for dde829f94a8f83bfa922090102449fde
=== Container logs for dde829f94a8f83bfa922090102449fde ===
  File "/snippet.py", line 65
    r, p, q, d, count, count2, count3 = (0L, 0L, 0L, 0L, 0, 0, 0) 
                                         ^
SyntaxError: invalid decimal literal
=== End of logs for dde829f94a8f83bfa922090102449fde ===
[2025-10-29 20:34:51] INFO: Container 1a91df01dda6fe13beb46a14bdb2eee989e1a584de900d93acc97f7124355fff has stopped
